  EntityConnectionServer, constructor now handles errors and un-exports the server
  EntityConnectionServerAdminImpl, constructor now handles errors and un-exports the server admin
  Entity.BackgroundColorProvider.getBackgroundColor() now returns Object instead of java.awt.Color to get rid of awt dependency
  Configuration.INVALID_VALUE_BACKGROUND_COLOR removed, unused
  EntityConnectionServer, domainModelClassNames, loginProxyClassNames, initialPoolUsers, webDocumentRoot, webServerPort and clientLoggingEnabled added as constructor parameters
  EntityConnectionServer.logShutdownAndReturn() added and used
  Configuration.DEFAULT_HORIZONTAL_AND_VERTICAL_COMPONENT_GAP removed
  Configuration.DEFAULT_LOOK_AND_FEEL_CLASSNAME removed, Configuration no longer depends on UiUtil
0.6.7
  Entity.KeyGenerator added, implementations added to EntityDefinitionImpl, factory methods to Entities
  IdSource removed
  EntityTableCellRenderer refactored
  TextValueLink.NullFormat moved to Util
  PropertyImpl.setFormat() no longer accepts null values
  PropertyImpl.initializeDefaultFormat() returns Util.NullFormat by default
  TristateValueLink now extends BooleanValueLink
  Database.loadDriver() removed, no longer required, jdbc.drivers system property can be used to specify the driver
  Database implementations load driver classes statically
  Database.createConnection() no longer throws ClassNotFoundException
  ivy configuration added, handles all libraries except for tjws, project 3rd party libraries updated
  ConnectionPools methods synchronized
  Renamed ivy runtime configurations
  MethodLogger refactored and improved
  LogEntry removed
  MethodLogger synchronized, enable/disable implemented
  DatabaseUtil.query() moved back to DatabaseConnection
  PropertyImpl no longer implements Serializable
  Property.PropertyValueFetcher added
  ServerLog now contains the MethodLogger entries instead of the logger itself
  ServerLog renamed ClientLog