@@ -180,8 +180,19 @@ public interface Entity extends ValueMap<String, Object>, Comparable<Entity> {
    * @param property the property
    * @param value the value
    * @return the previous value
+   * @throws IllegalArgumentException in case the value type does not fit the property
    */
   Object setValue(final Property property, final Object value);
+
+  /**
+   * Sets the value of the given property
+   * @param property the property
+   * @param value the value
+   * @param validateType if true then the type of the value is validated
+   * @return the previous value
+   * @throws IllegalArgumentException in case type validation is enabled, and the value type does not fit the property
+   */
+  Object setValue(final Property property, final Object value, final boolean validateType);
 
   /**
    * @return true if the this entity instance has a null primary key
